# industreallib

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  industreallib.code-workspace  pyproject.toml  setup.cfg  setup.py
docs/: api.rst  conf.py  getting_started.rst  index.rst
docs/_static/: custom.css
docs/_templates/: page.html
scripts/: run_sequence.py  run_simple_action.py  run_task.py
src/_industreallib/: __init__.py
src/industreallib/: __init__.py
src/industreallib/control/scripts/: control_utils.py
src/industreallib/perception/checkpoints/: industreal_detector_connectors.pt  industreal_detector_gears.pt  industreal_detector_pegs.pt
src/industreallib/perception/configs/: perception.yaml
src/industreallib/perception/io/: extrinsics_factoryreal.json  extrinsics_industreallib.json  extrinsics_manual.json  object_detections.json  realsense_params.json  workspace_mapping.json
src/industreallib/perception/scripts/: calibrate_extrinsics.py  detect_objects.py  map_workspace.py  perception_utils.py
src/industreallib/perception/scripts/training/: README.md  camera_utils.py  checkpoint.pt  coco_eval.py  coco_utils.py  data_utils.py  engine.py  train.py  transforms.py  utils.py  viewer_params.json
src/industreallib/rl/checkpoints/industreal_policy_generic/: config.yaml
src/industreallib/rl/checkpoints/industreal_policy_generic/nn/: industreal_policy_generic.pth
src/industreallib/rl/checkpoints/industreal_policy_insert_gears/: config.yaml
src/industreallib/rl/checkpoints/industreal_policy_insert_pegs/: config.yaml
src/industreallib/rl/checkpoints/industreal_policy_insert_pegs/nn/: industreal_policy_insert_pegs.pth
src/industreallib/rl/checkpoints/industreal_policy_pick/: config.yaml
src/industreallib/rl/checkpoints/industreal_policy_pick/nn/: industreal_policy_pick.pth
src/industreallib/rl/checkpoints/industreal_policy_place/: config.yaml
src/industreallib/rl/checkpoints/industreal_policy_place/nn/: industreal_policy_place.pth
src/industreallib/rl/checkpoints/industreal_policy_reach/: config.yaml
src/industreallib/rl/checkpoints/industreal_policy_reach/nn/: industreal_policy_reach.pth
src/industreallib/sequences/classes/: industreal_sequence_base.py
src/industreallib/sequences/instance_configs/: pick_place_insert_gears.yaml  pick_place_insert_pegs.yaml
src/industreallib/sequences/scripts/: sequence_utils.py
src/industreallib/tasks/classes/: industreal_task_base.py  industreal_task_insert.py  industreal_task_pick.py  industreal_task_place.py  industreal_task_reach.py
src/industreallib/tasks/instance_configs/: insert_connectors.yaml  insert_gears.yaml  insert_pegs.yaml  pick_connectors.yaml  pick_gears.yaml  pick_pegs.yaml  place_connectors.yaml  place_gears.yaml  place_pegs.yaml  reach.yaml
src/industreallib/tasks/instance_configs/pick_place_insert_gears/: insert_gears_large.yaml  insert_gears_medium.yaml  insert_gears_small.yaml  pick_gears_large.yaml  pick_gears_medium.yaml  pick_gears_small.yaml  place_gears_large.yaml  place_gears_medium.yaml  place_gears_small.yaml
src/industreallib/tasks/scripts/: task_utils.py
